@@ -7,6 +7,9 @@ Version 1.3
 -----------
 (in development)
 
+- Added the ``ensurenl`` lexer option, which can be used to suppress the
+  automatic addition of a newline to the lexer input.
+
 - Lexers added:
 
   * Ada
@@ -16,6 +19,8 @@ Version 1.3
   * Objective-J
   * Haml and Sass
   * CoffeeScript
+
+- Fixed a bug in `do_insertions()` used for multi-lexer languages.
 
 - Gherkin lexer: Fixed single apostrophe bug and added new i18n keywords.
 
